# vscode-colorpicker

./: .gitignore  .vscodeignore  README.md  build  extension.js  package-lock.json  package.json
lib/: commands.js
picker/: Cargo.toml
picker/src/: color.rs  main.rs  pickers.rs  shape_util.rs  widget_util.rs  widgets.rs
