[package]
name = "picker"
version = "0.1.0"
authors = ["Austin Hyde <austin109@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git="https://github.com/linebender/druid"}
palette = "0.5.0"
structopt = "0.3.18"
css-color = "0.1.1"
